unpackaged/objects/Work_Time__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work Time</relationshipLabel>
        <relationshipName>Work_Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Session__c</fullName>
        <label>Last Session</label>
        <summarizedField>Agent_Work_Time__c.Stop_Time__c</summarizedField>
        <summaryForeignKey>Agent_Work_Time__c.Work_Time__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_in_Hours__c</fullName>
        <formula>Time_in_Minutes__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Minutes__c</fullName>
        <formula>Time_in_Seconds__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Minutes</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Seconds__c</fullName>
        <label>Time in Seconds</label>
        <summarizedField>Agent_Work_Time__c.Time_in_Seconds__c</summarizedField>
        <summaryForeignKey>Agent_Work_Time__c.Work_Time__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_to_First_View_Seconds__c</fullName>
        <label>Time to First View (Seconds)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_First_View__c</fullName>
        <formula>text(MOD( floor( Time_to_First_View_Seconds__c/60/60 ) ,24)) &amp; &quot;h &quot; &amp; text(MOD( floor( Time_to_First_View_Seconds__c/60 ) ,60)) &amp; &quot;m &quot; &amp; text(MOD( floor( Time_to_First_View_Seconds__c ) ,60)) &amp; &quot;s&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to First View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Agent_Work_Time__c</fullName>
        <formula>text(MOD( floor( Time_in_Seconds__c/60/60 ) ,24)) &amp; &quot;h &quot; &amp; text(MOD( floor( Time_in_Seconds__c/60 ) ,60)) &amp; &quot;m &quot; &amp; text(MOD( floor( Time_in_Seconds__c ) ,60)) &amp; &quot;s&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Agent Work Time</label>
        <type>Text</type>
    </fields>
    <label>Work Time</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Work Time Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>